# bydriv.github.io

./: Datafile  Makefile  README.org  default.md  gallery.md  game.md  index.html  index.md  index.org  init.el  nav.html  novel.md  setup.org
Data/: RBMap.hs  RBMap.html  RBMap.org  RBSet.hs  RBSet.html  RBSet.org  Regexp.hs  Regexp.html  Regexp.org  index.html  index.org
about/: about.html  index.anne  index.html
agent-log/: Makefile  agent-log.tex  build.sh  first-mission.tex  header.html  index.html  index.md  style.css  template.html  violet-garden.tex  zero.tex
agent-log-underground/: Makefile  header.html  index.html  index.md  style.css  template.html
anne/: anne.cabal  anne.hs  example.anne  example.json  index.anne  index.html  spec.anne  spec.html  stack.yaml
anne/Data/: Anne.hs
anne/Data/Anne/: Defn.hs  Lexing.hs  Lexing.hsl  Parsing.hs  Parsing.hsy
anne/doc/: cheatsheet.anne  cheatsheet.html  example.json  shirley-cheatsheet.anne  shirley-cheatsheet.html  spec.anne  spec.html
anne/lib/: shirley.rb
anne/shirley/: html.rb
blog/: 2018-01.html  2018-01.org  2018-06.html  2018-06.org  2018-07.html  2018-07.org  2018-08.html  2018-08.org  2018-10.html  2018-10.org  2018-11-01.html  2018-11-01.org  2018.html  2018.org  A.v  Example1.hs  Example2.hs  Example3.hs  Exist.hs  FFI.hs  Fig22.hs  Storable.hs  Y.hs  Y1.hs  anne.ann  anne.anne  anne.html  (+61 more)
misc/injective/: injective.cabal
misc/injective/Data/: Injective.hs
misc/injective/Data/Injective/: Index.hs  Injection.hs  List.hs  Map.hs  Pool.hs  Quotient.hs  Relation.hs  Set.hs
misc/lemma/: index.html  index.md  lemma.cabal  stack.yaml
misc/lemma/Lemma/: Countable.hs  Graph.hs  Metric.hs  Physics.hs
misc/lemma/formal/: Metric.v
rustter/: .env  Cargo.toml
rustter/migrations/2018-09-08-071254_create_user/: up.sql
rustter/migrations/2018-09-08-165103_create_following/: down.sql  up.sql
rustter/migrations/2018-09-08-184711_create_index_following/: down.sql  up.sql
rustter/migrations/2018-09-08-222254_create_status/: up.sql
rustter/src/: api.rs  html_api.rs  json_api.rs  lib.rs  main.rs  models.rs  schema.rs
rustter/templates/: index.html  not-found.html  sign-in.html  sign-up.html  user-show.html
(+1264 files in other folders)
