name: anne
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: .
  default-language: Haskell2010
  build-depends: base, mtl
  ghc-options: -Wall -Werror -O3
  exposed-modules:
      Data.Anne
    , Data.Anne.Defn
    , Data.Anne.Parsing
    , Data.Anne.Lexing

executable anne
  hs-source-dirs: .
  main-is: anne.hs
  default-language: Haskell2010
  build-depends: base, mtl, anne
  ghc-options: -Wall -Werror -O3
  default-extensions: Safe, Strict, StrictData
  other-modules:
      Data.Anne
    , Data.Anne.Defn
    , Data.Anne.Parsing
    , Data.Anne.Lexing
