[package]
name = "rustter"
version = "0.1.0"
authors = ["bydriv <bydriv@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
siphasher = "~0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
actix-redis = "0.5.1"
