name: injective
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: .
  default-language: Haskell2010
  build-depends: base, parallel
  ghc-options: -Wall -Werror -O3
  default-extensions: Safe, Strict, StrictData
  exposed-modules:
      Data.Injective.Map,
      Data.Injective.Relation,
      Data.Injective.Set,
      Data.Injective.Quotient,
      Data.Injective.Index,
      Data.Injective.List
