name: lemma
version: 0.0.1
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: .
  default-language: Haskell2010
  build-depends: base
  ghc-options: -Wall -Werror -O3
  default-extensions: Safe, Strict, StrictData
  exposed-modules:
      Lemma.Metric
    , Lemma.Graph
    , Lemma.Countable
